--- a/src/components/MessengerContent/MessengerContentSidebar/messenger-content-sidebar.scss
+++ b/src/components/MessengerContent/MessengerContentSidebar/messenger-content-sidebar.scss
@@ -1,5 +1,3 @@
-@import "@/variables.scss";
-
 .messenger-content-sidebar {
   width: 364px;
   min-width: 364px;
@@ -10,12 +8,7 @@
 
   top: -14px;
   height: calc(100vh - 16px);
-  &.messenger-content-sidebar_dark {
-    background: $messages-color__dark;
-  }
-  &.messenger-content-sidebar_light {
-    background: $messages-color__light;
-  }
+  background: var(--messages-color);
 }
 
 .messenger-content-sidebar__container{
