--- a/src/components/MessengerContent/messenger-content.scss
+++ b/src/components/MessengerContent/messenger-content.scss
@@ -1,5 +1,3 @@
-@import "../../variables.scss";
-
 .messenger-content{
   display: flex;
   position: relative;
@@ -7,12 +5,7 @@
   height: calc(100vh - 30px);
   margin: 0 auto;
   //max-width: 1400px;
-  &.messenger-content_dark{
-    background: $main-color__dark;
-  }
-  &.messenger-content_light{
-    background: $main-color__light;
-  }
+  background: var(--main-color);
 }
 
 .separator{
@@ -21,12 +14,6 @@
   clear: both; /* для очистки, если тег идет после float елемента */
   margin: 0;
   padding: 0;
-  &.separator_dark{
-      color: $separator-color__dark; /*для IE */
-      background-color:$separator-color__dark; /*для Firefox, Opera, Safari*/
-  }
-  &.separator_light{
-      color: $separator-color__light; /*для IE */
-      background-color:$separator-color__light; /*для Firefox, Opera, Safari*/
-  }
+  color: var(--separator-color); /*для IE */
+  background-color: var(--separator-color); /*для Firefox, Opera, Safari*/
 }
