--- a/src/components/MessengerContent/MessengerContentNav/messenger-content-nav.scss
+++ b/src/components/MessengerContent/MessengerContentNav/messenger-content-nav.scss
@@ -13,4 +13,14 @@
 }
 .messenger-content-nav__folder-container{
   padding: 15px 9px 0;
+  height: calc(100% - 53px - 26px);
+  position: relative;
+  ::-webkit-scrollbar {
+    display: none;
+  }
+}
+.messenger-content-nav__folder-content {
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
 }
