--- a/src/views/login/login.scss
+++ b/src/views/login/login.scss
@@ -19,8 +19,9 @@
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
-  border:none;
   outline: none;
+  border: 1px solid transparent;
+
 
   border-radius: 9px;
   width: 100%;
@@ -31,6 +32,10 @@
   background: var(--search-input-color);
   &::placeholder {
     color: var(--placeholder-color);
+  }
+
+  &.login__input_error {
+    border: 1px solid red;
   }
 
 }
@@ -46,8 +51,9 @@
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
-  border:none;
   outline: none;
+  border: none;
+
   padding: 7px 15px;
   font-size: 20px;
   line-height: 27px;
@@ -58,8 +64,13 @@
 
   background: var(--main-color);
   color: var(--font-color);
-  &:hover{
+  &:hover {
     background: var(--active-folder-color);
     color: var(--messages-color);
+  }
+  &:disabled {
+    background: #c3c3c3;
+    color: var(--font-color);
+    cursor: no-drop;
   }
 }
