--- a/src/components/MessagesContainer/messages-container.scss
+++ b/src/components/MessagesContainer/messages-container.scss
@@ -1,5 +1,6 @@
 .messages-container {
-  height: calc(100% - 79px);
+  //85px - шапка + 1px hr, 15px - отступ снизу для ввода сообщений
+  height: calc(100% - 86px + 15px);
   width: 100%;
   position: relative;
   display: flex;
