--- a/src/components/MessengerContent/MessengerContentNav/messenger-content-nav.scss
+++ b/src/components/MessengerContent/MessengerContentNav/messenger-content-nav.scss
@@ -1,5 +1,6 @@
 .messenger-content-nav{
-  height: 100%;
+  //10 padding у создания папки и 12 - отступ от низа
+  height: calc(100% + 22px);
   width: 127px;
   min-width: 127px;
   max-width: 127px;
@@ -7,13 +8,17 @@
 }
 .messenger-content-nav__ava-container{
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: calc(53px + 26px);
+  height: 85px;
 }
 .messenger-content-nav__folder-container{
-  padding: 15px 9px 0;
-  height: calc(100% - 53px - 26px);
+  padding: 19px 9px 0;
+  //85 автарка
+  //65 "создать папку" + 10 padding создания папки
+  //1 hr
+  height: calc(100% - 85px - 75px - 1px);
   position: relative;
   ::-webkit-scrollbar {
     display: none;
@@ -23,4 +28,16 @@
   height: 100%;
   width: 100%;
   overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+}
+.messenger-content-nav__login {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 19px;
+  color: #FFFFFF;
+}
+.messenger-content-nav__pseudo-ava {
+  margin-bottom: 7px;
 }
