--- a/src/components/MessengerContent/MessengerContentPersonalMessages/messenger-content-personal-messages.scss
+++ b/src/components/MessengerContent/MessengerContentPersonalMessages/messenger-content-personal-messages.scss
@@ -1,10 +1,10 @@
 .messenger-content-personal-messages{
-  width: 100%;
-  flex: 7;
+  width: calc(calc(100vw - 127px) * 0.75);
+  max-width: calc(calc(100vw - 127px) * 0.75);
 }
 
 .messenger-content-personal-messages__header{
-  height: 79px;
+  height: 85px;
   display: flex;
   align-items: center;
   padding: 0 29px;
@@ -27,4 +27,15 @@
   line-height: 19px;
   color: var(--folder-color);
   text-align: left;
+}
+.settings-button {
+  position: absolute;
+  top: 22px;
+  right: 41px;
+  cursor: pointer;
+  svg {
+    path {
+      fill: var(--font-color);
+    }
+  }
 }
