--- a/src/components/UserInfo/user-info.scss
+++ b/src/components/UserInfo/user-info.scss
@@ -20,8 +20,8 @@
     left: 17px;
     width: 9px;
     height: 9px;
-    border-bottom: 1.5px solid var(--search-input-color);
-    border-left: 1.5px solid var(--search-input-color);
+    border-bottom: 1.5px solid #757589;
+    border-left: 1.5px solid #757589;
     transform: rotate(45deg);
   }
 }
@@ -45,7 +45,9 @@
   border-radius: 50%;
   width: 76px;
   height: 76px;
-  border: 2px solid var(--header-color);
+  padding: 1px;
+  background: var(--green-color);
+  border: 2px solid var(--messages-color);
 }
 .user-info__login {
   margin-left: 38px;
