--- a/src/views/messenger/messenger.scss
+++ b/src/views/messenger/messenger.scss
@@ -1,5 +1,10 @@
 .messenger{
   width: 100%;
-  padding: 30px 0;
+  padding: 30px 0 0;
   background: var(--header-color);
+}
+.messenger__bg {
+  width: 100%;
+  padding-bottom: 30px;
+  background: var(--footer-color);
 }
