--- a/src/views/settings/mailings/mailings.scss
+++ b/src/views/settings/mailings/mailings.scss
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid var(--create-folder-border-color);
+  border-bottom: 1px solid var(--separator-color);
 
   font-style: normal;
   font-weight: normal;
