--- a/src/components/MessengerContent/MessengerContentPersonalMessages/messenger-content-personal-messages.scss
+++ b/src/components/MessengerContent/MessengerContentPersonalMessages/messenger-content-personal-messages.scss
@@ -1,6 +1,7 @@
 .messenger-content-personal-messages{
-  width: calc(calc(100vw - 127px) * 0.75);
-  max-width: calc(calc(100vw - 127px) * 0.75);
+  //364 - dialogs, 127 - nav
+  width: calc(100vw - 364px - 127px);
+  max-width: calc(100vw - 364px - 127px);
 }
 
 .messenger-content-personal-messages__header{
