--- a/src/components/MessengerContent/messenger-content.scss
+++ b/src/components/MessengerContent/messenger-content.scss
@@ -22,7 +22,7 @@
   border-radius: 15px;
   position: relative;
   padding: 18px 0;
-  width: calc(calc(100vw - 127px) * 0.25);
+  width: 364px;
   top: -18px;
   height: calc(100vh - 24px);
   background: var(--messages-color);
