--- a/src/components/MessagesContainer/messages-container.scss
+++ b/src/components/MessagesContainer/messages-container.scss
@@ -6,3 +6,10 @@
   display: flex;
   flex-direction: column;
 }
+.messages-container__input{
+  position: relative;
+  padding: 15px 40px 3px 29px;
+  width: 100%;
+  max-width: 100%;
+  background: var(--footer-color);
+}
