fixed: /messenger left nav, user-info settings

--- a/src/components/MessengerContent/MessengerContentDialogs/messenger-content-dialogs.scss
+++ b/src/components/MessengerContent/MessengerContentDialogs/messenger-content-dialogs.scss
@@ -1,3 +1,8 @@
+.messenger-content-dialogs {
+    padding: 18px 0;
+
+}
+
 .messenger-content-dialogs__parameters-container {
     text-align: left;
     margin-top: 20px;
