--- a/src/components/MessengerContent/MessengerContentNav/messenger-content-nav.scss
+++ b/src/components/MessengerContent/MessengerContentNav/messenger-content-nav.scss
@@ -1,9 +1,8 @@
 .messenger-content-nav{
-  //10 padding у создания папки и 10 - отступ от низа
-  height: calc(100% + 20px);
-  width: 127px;
-  min-width: 127px;
-  max-width: 127px;
+  height: 100%;
+  width: 90px;
+  min-width: 90px;
+  max-width: 90px;
   background: var(--left-bar-color);
 }
 .messenger-content-nav__ava-container{
@@ -11,17 +10,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 85px;
-  &.messenger-content-nav__ava-container_header {
-    background: var(--header-color);
-  }
+  height: 78px;
 }
 .messenger-content-nav__folder-container{
-  padding: 19px 9px 0;
-  //85 автарка
-  //65 "создать папку" + 10 padding создания папки
-  //1 hr
-  height: calc(100% - 85px - 75px - 1px);
+  padding: 0 0 19px 0;
+  height: calc(100% - 78px);
   position: relative;
   ::-webkit-scrollbar {
     display: none;
@@ -34,13 +27,8 @@
   display: flex;
   flex-direction: column;
 }
-.messenger-content-nav__login {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 19px;
-  color: var(--user-name-color);
-}
-.messenger-content-nav__pseudo-ava {
-  margin-bottom: 7px;
+.messenger-content-nav__hamburger {
+  path {
+    fill: var(--default-svg-fill);
+  }
 }
