--- a/src/components/MessengerContent/messenger-content.scss
+++ b/src/components/MessengerContent/messenger-content.scss
@@ -2,9 +2,8 @@
   display: flex;
   position: relative;
   width: 100%;
-  height: calc(100vh - 60px);
+  height: 100%;
   margin: 0 auto;
-  //max-width: 1400px;
   background: var(--main-color);
 }
 
@@ -19,11 +18,10 @@
 }
 
 .messenger-content__middle-bar {
-  border-radius: 15px;
   position: relative;
-  padding: 18px 0;
-  width: 364px;
-  top: -18px;
-  height: calc(100vh - 24px);
-  background: var(--messages-color);
+
+  width: 27.5%;
+  height: 100%;
+  max-width: 365px;
+  background: var(--messenger-middle-bar-bg);
 }
