--- a/src/components/UserInfo/user-info.scss
+++ b/src/components/UserInfo/user-info.scss
@@ -17,9 +17,7 @@
   border-radius: 50%;
   width: 76px;
   height: 76px;
-  padding: 1px;
-  background: var(--green-color);
-  border: 2px solid var(--messages-color);
+  border: 2px solid var(--user-info-settings-header-bg);
 }
 .user-info__login {
   font-family: Segoe UI;
