--- a/src/components/MessengerContent/MessengerContentDialogs/messenger-content-dialogs.scss
+++ b/src/components/MessengerContent/MessengerContentDialogs/messenger-content-dialogs.scss
@@ -30,21 +30,28 @@
     }
 }
 .messenger-content-dialogs__parameters {
-    background: var(--search-input-color);
     text-align: left;
     overflow: hidden;
-    height: 127px;
+    height: 164px;
+    margin: 11px 20px 0;
+    background: var(--context-background-color);
+    border: 1px solid var(--context-background-color);
+    border-radius: 6px;
 }
 .messenger-content-dialogs__parameter {
-    padding: 0 16px;
-    margin: 8px 0;
-    font-family: Segoe UI;
+    padding: 10px 18px;
+    cursor: pointer;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 21px;
+    transition: .3s ease;
+    color: var(--user-info-settings-default-svg-fill);
 
-    color: var(--font-color);
+    &:hover {
+        background: var(--user-info-settings-hover-setting-bg);
+        color: var(--font-color);
+    }
 }
 
 .height-transition-enter-active, .height-transition-leave-active {
