--- a/src/components/MessengerContent/MessengerContentNav/messenger-content-nav.scss
+++ b/src/components/MessengerContent/MessengerContentNav/messenger-content-nav.scss
@@ -11,6 +11,17 @@
   justify-content: center;
   align-items: center;
   height: 78px;
+  &:hover {
+    background: var(--hover-folder-bg);
+  }
+  &.messenger-content-nav__ava-container_active {
+    background: var(--hover-folder-bg);
+  }
+}
+.messenger-content-nav__hamburger {
+  path {
+    fill: var(--default-svg-fill);
+  }
 }
 .messenger-content-nav__folder-container{
   padding: 0 0 19px 0;
@@ -26,9 +37,4 @@
   overflow-y: auto;
   display: flex;
   flex-direction: column;
-}
-.messenger-content-nav__hamburger {
-  path {
-    fill: var(--default-svg-fill);
-  }
 }
