--- a/src/components/MessengerContent/messenger-content.scss
+++ b/src/components/MessengerContent/messenger-content.scss
@@ -22,6 +22,7 @@
 
   height: 100%;
   width: 365px;
+  flex-shrink: 1;
   background: var(--messenger-middle-bar-bg);
   @media(max-width: 1440px) {
     width: 27.5%;
