--- a/src/components/SettingsContainer/SettingsNav/settings-nav.scss
+++ b/src/components/SettingsContainer/SettingsNav/settings-nav.scss
@@ -73,10 +73,10 @@
     }
   }
   &.router-link-exact-active {
-    color: var(--font-color);
-    background: var(--settings-left-bar-hover);
+    color: var(--font-color)!important;
+    background: var(--settings-left-bar-hover)!important;
     svg path {
-      fill: url(#paint0_linear);
+      fill: url(#paint0_linear)!important;
     }
   }
 }
