--- a/src/components/emoji-component/css/emoji-mart.css
+++ b/src/components/emoji-component/css/emoji-mart.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   height: 200px;
-  background: transparent;
+  background: var(--messages-input-wrapper-bg);
   margin-bottom: 14px;
 }
 
